# lazy-asr

./: .env.example  .gitignore  README.md  build.sh  docker-compose.yml  lzc-build.yml  lzc-manifest.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  run.sh
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  api.py  endpoints.py  websocket.py  websocket_endpoints.py
backend/app/core/: config.py  logger.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  asr_service.py
backend/app/utils/: __init__.py  audio_processing.py  file_manager.py  subtitle_formatters.py  video_processing.py
backend/plugins/: __init__.py  base.py  faster_whisper.py  local_whisper.py  manager.py  qwen_asr.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  i18n.js  index.js
frontend/src/components/: ASRConfig.js  AdvancedOptions.js  FileUpload.js  Header.js  ProcessingIndicator.js  ProgressPanel.css  ProgressPanel.js  ResultDisplay.js  SubmitButtons.js
frontend/src/constants/: config.js
frontend/src/hooks/: useASRProcessing.js
frontend/src/locales/: en.json  zh.json
frontend/src/services/: api.js
