[project]
name = "lazy-asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "soundfile>=0.13.1",
    "silero-vad>=6.0.0",
    "dashscope>=1.24.6",
    "requests>=2.32.5",
    "python-multipart>=0.0.9",
    "tqdm>=4.67.1",
]
